--- a/demo-pos/backend/package.json
+++ b/demo-pos/backend/package.json
@@ -11,6 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "formidable": "^2.0.1",
+    "fs-extra": "^10.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.4",
+    "mongoose-sequence": "^5.3.1",
+    "onesignal-node": "^3.3.0",
+    "rand-token": "^1.0.1"
   }
 }
